--- a/BethanysPieShopHRM.Server/Shared/NavMenu.razor
+++ b/BethanysPieShopHRM.Server/Shared/NavMenu.razor
@@ -2,14 +2,7 @@
     <div class="sidebar-logo">
         <img class="img-responsive" id="logo" src="images/bethanylogo.png" />
     </div>
-    <div class="profile">
-        <div class="profile-bg">
-            <img class="img-responsive" src="images/profilePicture.jpg" />
-        </div>
-        <div class="profile-picture">
-            <img class="img-responsive circle account-photo" src="images/profilePicture.jpg" />
-        </div>
-    </div>
+    <ProfilePicture />
     <div class="menu list-group list-group-flush">
         <NavLink class="list-group-item list-group-item-action bg-light" href="/" Match="NavLinkMatch.All">
             <span class="oi oi-home" aria-hidden="true"></span> Home
