New component for overview rows, profile pic bug fix

--- a/BethanysPieShopHRM.Server/Pages/EmployeeDetail.razor
+++ b/BethanysPieShopHRM.Server/Pages/EmployeeDetail.razor
@@ -6,10 +6,12 @@
         <h1 class="page-title">Details for @Employee.FirstName @Employee.LastName</h1>
 
         <div class="col-12 row">
+         @if (Employee.EmployeeId > 0)
+         {
             <div class="col-2">
                 <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" class="img-responsive rounded-circle employee-detail-img" />
             </div>
-
+         }
             <div class="col-10 row">
                 <div class="col-xs-12 col-sm-8">
                     <div class="form-group row">
