--- a/BethanysPieShopHRM.Server/Components/ProfilePicture.razor
+++ b/BethanysPieShopHRM.Server/Components/ProfilePicture.razor
@@ -1,8 +1,13 @@
-﻿<div class="profile">
+﻿@inherits ProfilePictureBase
+
+<div class="profile">
     <div class="profile-bg">
         <img class="img-responsive" src="images/profilePicture.jpg" />
     </div>
     <div class="profile-picture">
-        <img class="img-responsive circle account-photo" src="images/profilePicture.jpg" />
+        <img class="img-responsive @CssClass account-photo" 
+             src="images/profilePicture.jpg"
+             @onclick="PictureClick" />
+        <div class="mt-2 text-center">@ChildContent</div>
     </div>
 </div>
