--- a/BethanysPieShopHRM.Server/Pages/Index.razor
+++ b/BethanysPieShopHRM.Server/Pages/Index.razor
@@ -4,3 +4,6 @@
 
 <hr />
 <h3>Using this application, you can manage our wonderful staff working for us all over the world, bringing people the best pies ever!</h3>
+<ProfilePicture>
+    Hi, I'm Bethany!
+</ProfilePicture>
