--- a/BethanysPieShopHRM.Server/Components/EmployeeRow.razor
+++ b/BethanysPieShopHRM.Server/Components/EmployeeRow.razor
@@ -12,5 +12,8 @@
         <a href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-primary ">
             <i class="fas fa-edit"></i>
         </a>
+        <a href="" class="btn btn-primary table-btn" @onclick="e => Employee.ShowBenefits = !Employee.ShowBenefits">
+            <i class="fas fa-comment-dollar"></i>
+        </a>
     </td>
 </tr>
