Benefit selector added

--- a/BethanysPieShopHRM.Server/Components/BenefitSelector.razor
+++ b/BethanysPieShopHRM.Server/Components/BenefitSelector.razor
@@ -6,47 +6,48 @@
 }
 else
 {
-<div class="row">
-    <div class="col-md-8">
-        <table class="table table-sm">
-            <tr>
-                @*<th class="w-auto"></th>*@
-                <th class="w-auto">Benefit</th>
-                @*<th class="w-25">Start date</th>
-                    <th class="w-25">End date</th>*@
-            </tr>
-            @foreach (var benefit in Benefits)
-            {
+    <div class="row">
+        <div class="col-md-8">
+            <table class="table table-sm">
                 <tr>
-                    @* @key="benefit">
-                        <td>
-                            <input type="checkbox" checked="@benefit.Selected"
-                                   @onchange="e => CheckBoxChanged(e, benefit)" />
-                        </td>*@
-                    <td>@benefit.Description</td>
-
-                    @* @if (benefit.Selected)
-                            {
-                                <td>@benefit.StartDate</td>
-                                <td>
-                            <DateField @bind-Date="benefit.EndDate" />
-                        </td>
-                                }
-                                else
-                                {
-                                <td></td>
-                                <td></td>
-                                } *@
+                    <th class="w-auto"></th>
+                    <th class="w-auto">Benefit</th>
+                    @*<th class="w-25">Start date</th>
+                        <th class="w-25">End date</th>*@
                 </tr>
-            }
-        </table>
+                @foreach (var benefit in Benefits)
+                {
+                    <tr @key="benefit">
+                        <td>
+                            <input type="checkbox" checked="@benefit.Selected" @onchange="e => CheckBoxChanged(e, benefit)" />
+                            @* This does 2-way data binding but more happens in this case --> @bind="benefit.Selected" />*@
+                        </td>
+                        <td>@benefit.Description</td>
+
+                        @if (benefit.Selected)
+                        {
+                            <td>@benefit.StartDate</td>
+                            <td>
+                                <input type="date" @bind="benefit.EndDate" />
+                            </td>
+                        }
+                        else
+                        {
+                            <td></td>
+                            <td></td>
+                        }
+                    </tr>
+                }
+            </table>
+        </div>
+        <div class="col-md-4 mt-1">
+            <button class="btn btn-primary" disabled="@SaveButtonDisabled"
+                    @onclick="SaveClick">
+                Save
+            </button>
+
+        </div>
+
+        }
     </div>
-    @* <div class="col-md-4 mt-1">
-        <button class="btn btn-primary" disabled="@SaveButtonDisabled"
-                @onclick="SaveClick">
-            Save
-        </button>*@
-   
-</div>
-    
 }
