--- a/BethanysPieShopHRM.Server/Components/EmployeeRow.razor
+++ b/BethanysPieShopHRM.Server/Components/EmployeeRow.razor
@@ -3,7 +3,7 @@
 @{ 
     var cssClass = Employee.HasPremiumBenefits ? "table-success" : "";
 }
-<tr class="cssClass">
+<tr class="@cssClass">
     <td><img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}-small.jpg")" class="rounded-circle" /></td>
     <td>@Employee.EmployeeId</td>
     <td>@Employee.FirstName</td>
@@ -25,7 +25,7 @@
 {
     <tr>
         <td colspan="5">
-            <BenefitSelector @key="Employee" Employee="Employee" OnPremiumToggle="PremiumToggle"></BenefitSelector>
+            <BenefitSelector Employee="Employee" OnPremiumToggle="PremiumToggle" />
         </td>
     </tr>
 } 
